...
          );
        },
      ),
      const SizedBox(height: 16),
      if (_items.last.customName)
        TextField(
          key: const Key('trade-select-name'),
          controller: _items.last.name,
          decoration: ledgerFieldDecoration(
            context,
            label: 'اسم الصنف (اختياري)',
          ),
        ),
...
